# Claans2

./: .gitignore  Cargo.toml  README.md  diesel.toml  docker-compose.yml
.cargo/: config.toml
.github/workflows/: add-to-backlog.yml
db/: 01-init.sh
initdb/: 01-init.sh
migrations/2024-01-22-020556_create_orgs/: down.sql  up.sql
migrations/2024-01-22-022256_create_claans/: down.sql  up.sql
migrations/2024-01-22-022259_create_users/: down.sql  up.sql
migrations/2024-01-28-004459_quest_definitions/: down.sql  up.sql
migrations/2024-01-28-012045_active_quests/: down.sql  up.sql
migrations/2024-01-28-223757_completed_quests/: down.sql  up.sql
src/: main.rs  schema.rs
src/models/: mod.rs
src/routes/: index.rs  mod.rs  orgs.rs
src/services/: db.rs  mod.rs
templates/: orgs.html.hbs
templates/pages/: index.html.hbs  orgs.html.hbs
templates/partials/includes/: footer.html.hbs  nav.html.hbs
templates/partials/layouts/: base.html.hbs
templates/partials/utilities/: input.html.hbs
