[package]
name = "claans2"
version = "0.1.0"
authors = ["Alex Billington", "Jake Ratcliffe"]
edition = "2021"
description = "A Rust rebuild of the Claans app"
repository = "https://github.com/IoT-Gardener/Claans2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
diesel = { version = "2.1.4", features = ["postgres", "r2d2"] }
dotenvy = "0.15.7"
serde = "1.0.195"
log = "0.4.20"

[dependencies.rocket_dyn_templates]
version = "0.1.0"
features = ["handlebars"]

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["json"]
